<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout"
            style="@style/cardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="2dp">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/descriptionColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/muli_black"
                        android:text="@string/add_new_tracking_number"
                        android:textSize="24sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/descriptionColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/muli"
                        android:text="@string/description"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputTitle"
                        style="@style/inputBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="42dp"
                        android:maxLength="64">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTitle"
                            style="@style/loginInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/work_sans_bold"
                            android:hint="@string/title"
                            android:inputType="textCapSentences"
                            android:maxLength="160" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title_description"
                        android:textColor="@color/icon_color"
                        android:textSize="12sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputNumber"
                        style="@style/inputBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:maxLength="64">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editNumber"
                            style="@style/loginInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/work_sans_bold"
                            android:hint="@string/tracking_number"
                            android:inputType="textCapSentences"
                            android:maxLength="160" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tracking_id_hint"
                        android:textColor="@color/icon_color"
                        android:textSize="12sp" />

                    <com.cometengine.tracktrace.view.DashedLineView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="36dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/save"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_background_primary"
                        android:fontFamily="@font/work_sans_bold"
                        android:stateListAnimator="@null"
                        android:text="@string/done"
                        android:textAllCaps="false"
                        android:textColor="@color/bottom_bar_light"
                        android:textSize="16sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.core.widget.NestedScrollView>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>